@@ -51,7 +51,7 @@ package body Alr.Commands.Update is
       declare
          Success : Boolean;
          Needed  : constant Alire.Query.Instance :=
-                     Alire.Query.Resolve (Project.Current.Depends, Success);
+                     Alire.Query.Resolve (Project.Current.Depends, Success, Query_Policy);
       begin
          if not Success then
             Log ("Update failed");
